@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t20001228
+MANIFEST for cm_tools, version t20010109
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
